# machine-learning-studies

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
machine_learning_studies/deep_learning/data/: time_series_dataset.py
machine_learning_studies/deep_learning/models/: torch_rnn.py
machine_learning_studies/deep_learning/notebooks/: recurrent_neural_network.py
machine_learning_studies/timeseries/data/: syntethic.py
test/timeseries/data/: test_synthetic.py
