[tool.poetry]
name = "machine-learning-studies"
version = "0.1.0"
description = ""
authors = ["pedronarloch <pedro.narloch@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_studies"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
jupyterlab = "^3.5.2"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
tqdm = "^4.64.1"
torchmetrics = "^0.11.0"
jupytext = "^1.14.4"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.0"
jupyter = "^1.0.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
